--- a/MSHappiness/public/css/Custom.css
+++ b/MSHappiness/public/css/Custom.css
@@ -2,6 +2,10 @@
     background-color: #7FCDE3;
 }
 
+/*#surveyFirst{
+    background-color: lightgray;
+}*/
+
 .promo-text-v2 {
     visibility: visible;
     animation-duration: 1.5s;
