--- a/MSHappiness/public/css/bootstrap.css
+++ b/MSHappiness/public/css/bootstrap.css
@@ -5596,12 +5596,12 @@ button.list-group-item-danger.active:focus {
 .panel > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child th:last-child {
   border-bottom-right-radius: 3px;
 }
-.panel > .panel-body + .table,
+/*.panel > .panel-body + .table,
 .panel > .panel-body + .table-responsive,
 .panel > .table + .panel-body,
 .panel > .table-responsive + .panel-body {
   border-top: 1px solid #ddd;
-}
+}*/
 .panel > .table > tbody:first-child > tr:first-child th,
 .panel > .table > tbody:first-child > tr:first-child td {
   border-top: 0;
@@ -5675,16 +5675,16 @@ button.list-group-item-danger.active:focus {
 .panel-group .panel-heading {
   border-bottom: 0;
 }
-.panel-group .panel-heading + .panel-collapse > .panel-body,
+/*.panel-group .panel-heading + .panel-collapse > .panel-body,
 .panel-group .panel-heading + .panel-collapse > .list-group {
   border-top: 1px solid #ddd;
-}
+}*/
 .panel-group .panel-footer {
   border-top: 0;
 }
-.panel-group .panel-footer + .panel-collapse .panel-body {
+/*.panel-group .panel-footer + .panel-collapse .panel-body {
   border-bottom: 1px solid #ddd;
-}
+}*/
 .panel-default {
   border-color: #ddd;
 }
@@ -5693,16 +5693,16 @@ button.list-group-item-danger.active:focus {
   background-color: #f5f5f5;
   border-color: #ddd;
 }
-.panel-default > .panel-heading + .panel-collapse > .panel-body {
+/*.panel-default > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #ddd;
-}
+}*/
 .panel-default > .panel-heading .badge {
   color: #f5f5f5;
   background-color: #333;
 }
-.panel-default > .panel-footer + .panel-collapse > .panel-body {
+/*.panel-default > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #ddd;
-}
+}*/
 .panel-primary {
   border-color: #337ab7;
 }
@@ -5711,16 +5711,16 @@ button.list-group-item-danger.active:focus {
   background-color: #337ab7;
   border-color: #337ab7;
 }
-.panel-primary > .panel-heading + .panel-collapse > .panel-body {
+/*.panel-primary > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #337ab7;
-}
+}*/
 .panel-primary > .panel-heading .badge {
   color: #337ab7;
   background-color: #fff;
 }
-.panel-primary > .panel-footer + .panel-collapse > .panel-body {
+/*.panel-primary > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #337ab7;
-}
+}*/
 .panel-success {
   border-color: #d6e9c6;
 }
@@ -5729,16 +5729,16 @@ button.list-group-item-danger.active:focus {
   background-color: #dff0d8;
   border-color: #d6e9c6;
 }
-.panel-success > .panel-heading + .panel-collapse > .panel-body {
+/*.panel-success > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #d6e9c6;
-}
+}*/
 .panel-success > .panel-heading .badge {
   color: #dff0d8;
   background-color: #3c763d;
 }
-.panel-success > .panel-footer + .panel-collapse > .panel-body {
+/*.panel-success > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #d6e9c6;
-}
+}*/
 .panel-info {
   border-color: #bce8f1;
 }
@@ -5747,16 +5747,16 @@ button.list-group-item-danger.active:focus {
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
-.panel-info > .panel-heading + .panel-collapse > .panel-body {
+/*.panel-info > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #bce8f1;
-}
+}*/
 .panel-info > .panel-heading .badge {
   color: #d9edf7;
   background-color: #31708f;
 }
-.panel-info > .panel-footer + .panel-collapse > .panel-body {
+/*.panel-info > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #bce8f1;
-}
+}*/
 .panel-warning {
   border-color: #faebcc;
 }
@@ -5772,9 +5772,9 @@ button.list-group-item-danger.active:focus {
   color: #fcf8e3;
   background-color: #8a6d3b;
 }
-.panel-warning > .panel-footer + .panel-collapse > .panel-body {
+/*.panel-warning > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #faebcc;
-}
+}*/
 .panel-danger {
   border-color: #ebccd1;
 }
@@ -5783,16 +5783,16 @@ button.list-group-item-danger.active:focus {
   background-color: #f2dede;
   border-color: #ebccd1;
 }
-.panel-danger > .panel-heading + .panel-collapse > .panel-body {
+/*.panel-danger > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #ebccd1;
-}
+}*/
 .panel-danger > .panel-heading .badge {
   color: #f2dede;
   background-color: #a94442;
 }
-.panel-danger > .panel-footer + .panel-collapse > .panel-body {
+/*.panel-danger > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #ebccd1;
-}
+}*/
 .embed-responsive {
   position: relative;
   display: block;
